fixed overflow on home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -178,10 +178,11 @@ body {
 
 .content-img {
     width: 100%;
+    text-align: center;
 }
 
 .content-img img {
-    width: 100%;
+    width: 90%;
 }
 
 .content-text {
